force-app/main/default/objects/Lessons_Learned__c/Lessons_Learned__c.object-meta.xml
<CustomObject>
    <label>Lessons Learned</label>
    <nameField>
        <label>Lessons Learned Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lessons Learned</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>