force-app/main/default/objects/Lessons_Learned__c/fields/Category_Owner__c.field-meta.xml
<CustomField>
    <fullName>Category_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lessons_Learned1</relationshipName>
    <type>Lookup</type>
</CustomField>