force-app/main/default/objects/Lessons_Learned__c/fields/Date_Raised__c.field-meta.xml
<CustomField>
    <fullName>Date_Raised__c</fullName>
    <label>Date Raised</label>
    <type>Date</type>
</CustomField>