force-app/main/default/objects/Lessons_Learned__c/fields/MIS__c.field-meta.xml
<CustomField>
    <fullName>MIS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MIS</label>
    <referenceTo>MIS__c</referenceTo>
    <relationshipLabel>Lessons Learned</relationshipLabel>
    <relationshipName>Lessons_Learned</relationshipName>
    <type>Lookup</type>
</CustomField>