force-app/main/default/objects/Lessons_Learned__c/fields/Observation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Observation_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Observation Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lessons_Learned</relationshipName>
    <type>Lookup</type>
</CustomField>