force-app/main/default/objects/Lessons_Learned__c/fields/Proposed_improvement__c.field-meta.xml
<CustomField>
    <fullName>Proposed_improvement__c</fullName>
    <label>Proposed improvement</label>
    <type>TextArea</type>
</CustomField>