force-app/main/default/objects/Lessons_Learned__c/fields/Specific_Actions__c.field-meta.xml
<CustomField>
    <fullName>Specific_Actions__c</fullName>
    <label>Specific Actions</label>
    <type>TextArea</type>
</CustomField>