force-app/main/default/objects/Lessons_Learned__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SOE__c</columns>
    <columns>Task__c</columns>
    <columns>Observations__c</columns>
    <columns>Proposed_improvement__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Raised__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>